# spec-kitty-events

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  README.md  RELEASE_NOTES.md  WP01-verification.md  WP02-verification.md  WP03-release-readiness.md  pyproject.toml
.github/workflows/: acceptance.yml  ci.yml  cross-repo-harness-tests.yml  publish-pypi.yml  publish-testpypi.yml
.kittify/: .dashboard  config.yaml  metadata.yaml  mission-brief.md  skills-manifest.json
.kittify/charter/: charter.md
.kittify/encoding-provenance/: global.jsonl
.kittify/overrides/: AGENTS.md
.kittify/workspaces/: 001-event-model-project-identity-WP01.json  001-event-model-project-identity-WP02.json  001-event-model-project-identity-WP03.json  002-github-gate-observability-contracts-WP01.json  002-github-gate-observability-contracts-WP02.json  002-github-gate-observability-contracts-WP03.json  003-status-state-model-contracts-WP01.json  003-status-state-model-contracts-WP02.json  003-status-state-model-contracts-WP03.json  003-status-state-model-contracts-WP04.json  004-canonical-event-contract-WP01.json  004-canonical-event-contract-WP02.json  004-canonical-event-contract-WP03.json  004-canonical-event-contract-WP04.json  005-event-contract-conformance-suite-WP01.json  005-event-contract-conformance-suite-WP02.json  005-event-contract-conformance-suite-WP03.json  005-event-contract-conformance-suite-WP04.json  005-event-contract-conformance-suite-WP05.json  005-event-contract-conformance-suite-WP06.json  005-event-contract-conformance-suite-WP07.json  006-mission-collaboration-soft-coordination-contracts-WP01.json  006-mission-collaboration-soft-coordination-contracts-WP02.json  006-mission-collaboration-soft-coordination-contracts-WP03.json  006-mission-collaboration-soft-coordination-contracts-WP04.json  006-mission-collaboration-soft-coordination-contracts-WP05.json  006-mission-collaboration-soft-coordination-contracts-WP06.json  006-mission-collaboration-soft-coordination-contracts-WP07.json  006-mission-collaboration-soft-coordination-contracts-WP08.json  006-mission-collaboration-soft-coordination-contracts-WP09.json  007-glossary-semantic-integrity-contracts-WP01.json  007-glossary-semantic-integrity-contracts-WP02.json  007-glossary-semantic-integrity-contracts-WP03.json  007-glossary-semantic-integrity-contracts-WP04.json  007-glossary-semantic-integrity-contracts-WP05.json  007-glossary-semantic-integrity-contracts-WP06.json  007-glossary-semantic-integrity-contracts-WP07.json  007-glossary-semantic-integrity-contracts-WP08.json  007-glossary-semantic-integrity-contracts-WP09.json  007-glossary-semantic-integrity-contracts-WP10.json  (+26 more)
.spec-kitty/: review-lock.json
contracts/: README.md
docs/: consumer-contract-dossier-v2.4.0.md
kitty-specs/001-event-model-project-identity/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/002-github-gate-observability-contracts/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/003-status-state-model-contracts/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/004-canonical-event-contract/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/005-event-contract-conformance-suite/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/006-mission-collaboration-soft-coordination-contracts/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/007-glossary-semantic-integrity-contracts/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/008-mission-dossier-parity-event-contracts/: data-model.md  meta.json  plan.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/009-dossier-contracts-remote-baseline-release/: meta.json  plan.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/010-mission-audit-lifecycle-contracts/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/011-wp03-decisionpoint-lifecycle-contracts/: meta.json  plan.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/012-wp04-events-connector-sync-contracts/: meta.json  plan.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/013-per-user-identity-connector-events/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/014-mission-contract-cutover/: data-model.md  lanes.json  meta.json  mission-events.jsonl  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
scripts/: generate_v1_golden_fixtures.py
src/spec_kitty_events/: __init__.py  crdt.py  (+28 more)
tests/: conftest.py  test_analytics_conformance.py  test_conformance_classes.py  test_connector_conformance.py  test_connector_reducer.py  test_connector_roster.py  test_decisionpoint_conformance.py  test_decisionpoint_reducer.py  test_dossier_conformance.py  test_dossier_reducer.py  test_fixture_determinism.py  test_forbidden_keys.py  test_glossary.py  test_glossary_conformance.py  test_glossary_reducer.py  test_lane_vocabulary.py  test_mission_audit_conformance.py  test_mission_audit_reducer.py  test_mission_next_conformance.py  test_mission_next_reducer.py  test_payload_reconciliation.py  test_profile_invocation_conformance.py  test_retrospective_conformance.py  test_sync_conformance.py  test_sync_reducer.py  test_timestamp_semantics_conformance.py  test_validation_benchmark.py  test_validation_error.py
(+702 files in other folders)
