[project]
name = "spec-kitty-events"
version = "0.4.0-alpha"
description = "Event log library with Lamport clocks and systematic error tracking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Robert Douglass", email = "rob@example.com"}
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "python-ulid>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
]
conformance = [
    "jsonschema>=4.21.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spec_kitty_events = ["py.typed", "schemas/*.json", "conformance/fixtures/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/spec_kitty_events --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["src/spec_kitty_events"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
